--- a/portfolio.css
+++ b/portfolio.css
@@ -48,9 +48,10 @@ img[alt="foto van mijzelf"] {
 }
 
 #intro {
-    margin-top: -23em;
+    margin-top: -20em;
     margin-left: 5em;
     margin-bottom: 18em;
+    font-size: 1.5em
 }
 
 
